--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lazyload": "^3.2.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.1.5"
   },
