--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-router-bootstrap": "^0.26.3",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
