Github runner keeps being tracked, automation removing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,4 @@ jobs:
             npm run build
             docker-compose down
             docker-compose up --build -d
+            tailscale logout
