--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           script: |
             cd ~/Projects/KevinPortfolio
             git pull origin main
-            npm install --production
+            npm install
             npm run build
             docker-compose down
             docker-compose up --build -d
