Deploy with remove node_modules

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
           script: |
             cd ~/Projects/KevinPortfolio
             git pull origin main
+            rm -rf node_modules
             npm install
             npm run build
             docker-compose down
